--- a/AvnRepository/AvnRepository.csproj
+++ b/AvnRepository/AvnRepository.csproj
@@ -4,7 +4,24 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Authors>CarlFranklin</Authors>
+		<Company>App vNext</Company>
+		<Description>A generic re-usable repository interface with support for passing queries over the wire.</Description>
+		<Copyright>Copyright 2022 by App vNext, LLC</Copyright>
+		<PackageProjectUrl></PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/carlfranklin/AvnRepository</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<NeutralLanguage>en</NeutralLanguage>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 	
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
