--- a/AvnRepository/AvnRepository.csproj
+++ b/AvnRepository/AvnRepository.csproj
@@ -14,6 +14,7 @@
 		<RepositoryUrl>https://github.com/carlfranklin/AvnRepository</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<NeutralLanguage>en</NeutralLanguage>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
