--- a/AvnRepository/AvnRepository.csproj
+++ b/AvnRepository/AvnRepository.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Authors>CarlFranklin</Authors>
+		<Authors>App vNext</Authors>
 		<Company>App vNext</Company>
 		<Description>A generic re-usable repository interface with support for passing queries over the wire.</Description>
 		<Copyright>Copyright 2022-2024 by App vNext, LLC</Copyright>
@@ -15,9 +15,16 @@
 		<RepositoryType>git</RepositoryType>
 		<NeutralLanguage>en</NeutralLanguage>
 		<Version>8.0.0</Version>
+		<Title>AvnRepository</Title>
+		<PackAsTool>True</PackAsTool>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
